--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "13.5",
+    "next": "^15.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.5.3"
   }
