--- a/infra/compose.yaml
+++ b/infra/compose.yaml
@@ -1,8 +1,8 @@
 services:
   database:
     image: "postgres:16.10-alpine3.22"
-    environment:
-      POSTGRES_PASSWORD: "local_password"
+    env_file:
+      - ../.env
     ports:
       - "5432:5432"
 
